--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Koin for Android
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+    implementation "org.koin:koin-java:$koin_version"
+    testImplementation "org.koin:koin-test:$koin_version"
 }
